fix(components): [input] prevent layout shift when toggling clear icon

--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -335,6 +335,10 @@
     margin-left: 8px;
   }
 
+  & .#{$namespace}-input__clear {
+    transition: color getCssVar('transition-duration');
+  }
+
   @include e(validateIcon) {
     pointer-events: none;
   }
